# TulparAPI

./: .dockerignore  .env  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
data/: rubaiyat.json
migrations/: 20240101000000_init.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/middleware/: mod.rs
src/modules/content/: mod.rs  routes.rs  store.rs
tests/: integration_test.rs
