[package]
name = "tulpar-api"
version = "0.1.0"
edition = "2021"
default-run = "tulpar-api"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
moka = { version = "0.12", features = ["future"] }
lz4_flex = "0.11"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors", "request-id", "trace", "util"] }
thiserror = "1"
futures = "0.3"
tower_governor = { version = "0.5.0", features = ["tracing"] }
governor = "0.8.1"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
axum-test = "15.6.0"
http = "1.4.0"
serde_json = "1"
tempfile = "3.24.0"
tower = "0.5.2"
